--- a/Pipfile
+++ b/Pipfile
@@ -28,6 +28,7 @@ django-cache-url = "==3.4.5"
 environs = "==11.0.0"
 marshmallow = "==3.21.3"
 python-dotenv = "==1.0.1"
+markdown = "==3.6"
 
 [dev-packages]
 
