--- a/Pipfile
+++ b/Pipfile
@@ -29,6 +29,7 @@ environs = "==11.0.0"
 marshmallow = "==3.21.3"
 python-dotenv = "==1.0.1"
 markdown = "==3.6"
+pytz = "==2024.1"
 
 [dev-packages]
 
